# py-lr-proxy

./: Dockerfile  README.md  build-deploy.sh  pyproject.toml
app/: litterbot.py  main.py
helm/lr-proxy/: Chart.yaml  values.yaml
helm/lr-proxy/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/lr-proxy/templates/tests/: test-connection.yaml
src/app/: config.py  litterbot.py  main.py
src/app/monitors/: __init__.py  base.py  blinds.py  doorbell.py  homeassistant.py  homeassistant_entitiy_monitor_base.py  internet.py  julep_feeder.py  scrypted.py
