[project]
name = "pylrproxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "pylitterbot>=2025.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

